# miniHOD

./: .gitignore  Makefile  README.md  example.py  miniHOD_demo.ipynb  pyproject.toml  setup.py
miniHOD/: __init__.py  _core.py  hod.py
src/: hod.c
tests/: conftest.py  test_catalog_stats.py  test_stats.py  test_unit.py
