[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "miniHOD"
version = "0.1.0"
description = "Fast 6-parameter HOD galaxy populator with a C backend"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest", "halotools", "Corrfunc"]

[tool.setuptools.packages.find]
include = ["miniHOD*"]
